<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_welcome1"
    tools:context=".ui.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/headerSection"
                android:layout_width="395dp"
                android:layout_height="218dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/backgroundImageView"
                    android:layout_width="match_parent"
                    android:layout_height="195dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_banner2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textOverlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/find_your_batik_pattern"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.154" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/scanBatikButton"
                    android:layout_width="144dp"
                    android:layout_height="46dp"
                    android:layout_marginTop="8dp"
                    android:icon="@drawable/ic_camera"
                    android:text="@string/scan_your_batik"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/backgroundImageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textOverlay"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/topDividerImageView"
                android:layout_width="212dp"
                android:layout_height="24dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/garis"
                app:layout_constraintEnd_toEndOf="@+id/sectionTitle"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="@+id/sectionTitle"
                app:layout_constraintTop_toBottomOf="@+id/sectionTitle" />

            <TextView
                android:id="@+id/sectionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/explore_other_batik"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headerSection" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="366dp"
                android:layout_height="517dp"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.481"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topDividerImageView"
                tools:listitem="@layout/item_batik_card" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
